--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="connection_list_header">Connection list from %1$</string>
-    <string name="nearby_places_header">Nearby Places</string>
+    <string name="nearby_places_header">Stops Nearby %1s</string>
+    <string name="search">search</string>
+    <string name="enter_your_postcode">Enter Your postcode</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
